# 3DSegStuff

./: .gitignore  LICENSE  README.md  preprocess.py  pyproject.toml
scripts/: compute_receptive_field.py  config_unet.py  convert_nd2_multipoint_to_omezarr.py  dilate_masks.py  gp_pipeline.py  helper_imshow_gp.py  omezarr_conversion.py  omezarr_conversion_noLabel.py  post_process_affs.py  post_process_affs_2D_stitch.py  post_process_affs_more_neighborhoods.py  preprocess.py  run_predict.py  run_predict_2p5D.py  run_predict_XZ.py  run_predict_batch.py  run_training.py  run_training_2p5D.py  split_data_set.py  view_labels_and_raw_neuroglancer.py  view_neuroglancer.py
scripts/config_files/: config_unet.json  config_unet_XZ.json  config_unet_ms.json  config_unet_ms_long_range.json  config_unet_ms_short_range.json
scripts/preparation/: watershed.py  watershed_SDT.py
scripts/wandb/: latest-run
src/3DSegStuff/data/: io.py
src/ThreeDSegStuff/: dilation.py  evaluation.py  invert.py  loss.py  predict.py  predict_2p5D.py  train.py  train_2p5D.py  unet.py  unet_2p5D.py  validate.py
src/ThreeD_affs_from_2d_affs_long_range/: model.py  net_config.json  predict.py  train.py
src/ThreeD_affs_from_2d_affs_short_range/: model.py  net_config.json  predict.py
wandb/: latest-run
wandb/offline-run-20260616_024022-t7c10b2c/: run-t7c10b2c.wandb
wandb/offline-run-20260616_025030-74bfr9qi/: run-74bfr9qi.wandb
wandb/offline-run-20260616_030011-w6ncgybf/: run-w6ncgybf.wandb
wandb/offline-run-20260616_030457-sh0rflsx/: run-sh0rflsx.wandb
wandb/offline-run-20260616_030904-lds6zw3k/: run-lds6zw3k.wandb
wandb/offline-run-20260616_030954-p22bhbqs/: run-p22bhbqs.wandb
wandb/offline-run-20260616_031058-fqoyurud/: run-fqoyurud.wandb
wandb/offline-run-20260616_031156-rwnpaw0c/: run-rwnpaw0c.wandb
wandb/offline-run-20260616_031244-2admc2ty/: run-2admc2ty.wandb
wandb/offline-run-20260616_031453-ctk9qm2r/: run-ctk9qm2r.wandb
wandb/offline-run-20260616_031635-tvz0h9tq/: run-tvz0h9tq.wandb
wandb/offline-run-20260616_032219-pal3ur98/: run-pal3ur98.wandb
wandb/offline-run-20260616_032500-spgfb97v/: run-spgfb97v.wandb
(+85 files in other folders)
