[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "3DSegStuff"
description = "DL@Janelia 3D instance segmentation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
dynamic = ["version"]

authors = [
  {email = "eric_chen@g.harvard.edu", name = "Eric Chen"}
]

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
]
