[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "3DSegStuff"
description = "DL@Janelia 3D instance segmentation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
dynamic = ["version"]

authors = [
  {email = "eric_chen@g.harvard.edu", name = "Eric Chen"}
]

dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
]

authors = [
  {email = "federico.carrara@fht.org", name = "Federico Carrara"},
  {email = "vvenu@utexas.edu", name = "Vijay Venu"},
  {email = "xinyuantx@gmail.com, name = "Xinyuan Zhang"},
  {email = "morgane.storey@epfl.ch", name = "Morgane Storey"}
  {email="ychiu@caltech.edu", name="Yun Chiu"},
  {email = "javier.marquina.s@gmail.com", name = "Javier Marquina"},
  {email = "imancebo@pa.uc3m.es, name = "Irene Mancebo" },
  {email = "hoblos.h@wehi.edu.au", name = "Hanadi Hoblos"},
]
